--- a/wp-content/themes/justaskkim-twentyeleven/start3.html
+++ b/wp-content/themes/justaskkim-twentyeleven/start3.html
@@ -1,1 +1,88 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/><link rel="stylesheet" type="text/css" href="homepagestyle.css"></link><style>.panelsiframe{border-collapse:collapse;margin-top:0;margin-left:0;margin-right:0;border:0;border-top:0;border-width:0;border-spacing:0;border-style:none;margin:0;padding:0}</style></head><body><table height=590px width=100% cellspacing=0px align="left" class="roundedtables"><tr width=100% height=42px cellspacing=0px align="left" class="listingtr"><td class="subjectslistheader" width=100% height=42px cellspacing=0px align="left"><p class="headertext">places</p></td></tr><tr width=100% height=35px cellspacing=0px align="left" class="listingtr"><td class="listing" height=35px onclick="top.location='http://onstudynotes.com/average-calculator/';" onmouseover='this.style.cursor="pointer"'><p class="listingstext">average calculator</p></td></tr><tr width=100% height=35px cellspacing=0px align="left" class="listingtr"><td class="listing" height=35px onclick="top.location='http://onstudynotes.com/chat/';" onmouseover='this.style.cursor="pointer"'><p class="listingstext">chat</p></td></tr><tr width=100% height=35px cellspacing=0px align="left" class="listingtr"><td class="listing" height=35px onclick="top.location='http://onstudynotes.com/contact-us/';" onmouseover='this.style.cursor="pointer"'><p class="listingstext">contact us</p></td></tr><tr width=100% height=35px cellspacing=0px align="left" class="listingtr"><td class="listing" height=35px onclick="top.location='http://onstudynotes.com/about-us/';" onmouseover='this.style.cursor="pointer"'><p class="listingstext">about us</p></td></tr></tr><tr width=100% height=3px cellspacing=0px align="left"><td width=100% height=3px cellspacing=0px align="left" style="background-color:white;"></td></tr><tr width=100% height=62px cellspacing=0px align="left"><td width=100% height=62px cellspacing=0px align="left" class="submit" class="roundedthird" onclick="top.location='http://www.onstudynotes.com/submit/';" onmouseover='this.style.cursor="pointer"'><center><p class="resettext">Submit</p></center></td></tr><tr width=100% height=3px cellspacing=0px align="left"><td width=100% height=3px cellspacing=0px align="left" style="background-color:white;"></td></tr><tr width=100% height=340px cellspacing=0px align="left" border=0px><td width=100% height=340px cellspacing=0px align="left" border=0px class="start3colour"></td></tr></table></body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<link rel="stylesheet" type="text/css" href="homepagestyle.css">
+</link>
+<style>
+.panelsiframe {
+	border-collapse: collapse;
+	margin-top: 0;
+	margin-left: 0;
+	margin-right: 0;
+	border: 0;
+	border-top: 0;
+	border-width: 0;
+	border-spacing: 0;
+	border-style: none;
+	margin: 0;
+	padding: 0
+}
+</style>
+</head>
+<body>
+<table height=590px width=100% cellspacing=0px align="left" class="roundedtables">
+  <tr width=100% height=42px cellspacing=0px align="left" class="listingtr">
+    <td class="subjectslistheader" width=100% height=42px cellspacing=0px align="left"><p class="headertext">places</p></td>
+  </tr>
+  <tr width=100% height=35px cellspacing=0px align="left" class="listingtr">
+    <td class="listing" height=35px onclick="top.location='http://onstudynotes.com/average-calculator/';" onmouseover='this.style.cursor="pointer"'><p class="listingstext">average calculator</p></td>
+  </tr>
+  <tr width=100% height=35px cellspacing=0px align="left" class="listingtr">
+    <td class="listing" height=35px onclick="top.location='http://onstudynotes.com/chat/';" onmouseover='this.style.cursor="pointer"'><p class="listingstext">chat</p></td>
+  </tr>
+  <tr width=100% height=35px cellspacing=0px align="left" class="listingtr">
+    <td class="listing" height=35px onclick="top.location='http://onstudynotes.com/contact-us/';" onmouseover='this.style.cursor="pointer"'><p class="listingstext">contact us</p></td>
+  </tr>
+  <tr width=100% height=35px cellspacing=0px align="left" class="listingtr">
+    <td class="listing" height=35px onclick="top.location='http://onstudynotes.com/about-us/';" onmouseover='this.style.cursor="pointer"'><p class="listingstext">about us</p></td>
+  </tr>
+    </tr>
+  <tr width=100% height=3px cellspacing=0px align="left">
+    <td width=100% height=3px cellspacing=0px align="left" style="background-color:white;"></td>
+  </tr>
+  <tr width=100% height=62px cellspacing=0px align="left"><td width=100% height=62px cellspacing=0px align="left" class="submit" class="roundedthird" onclick="top.location='http://www.onstudynotes.com/submit/';" onmouseover='this.style.cursor="pointer"'>
+    <center>
+      <p class="resettext">submit</p>
+    </center>
+      </td>
+  </tr>
+  
+  <tr width=100% height=3px cellspacing=0px align="left">
+    <td width=100% height=3px cellspacing=0px align="left" style="background-color:white;"></td>
+  </tr>
+  
+  <tr width=100% height=62px cellspacing=0px align="left"><td width=100% height=62px cellspacing=0px align="left" class="submit" class="roundedthird" onclick="top.location='http://www.onstudynotes.com/partners/';" onmouseover='this.style.cursor="pointer"'>
+    <center>
+      <p class="resettext">partners</p>
+    </center>
+      </td>
+  </tr>
+  
+  <tr width=100% height=3px cellspacing=0px align="left">
+    <td width=100% height=3px cellspacing=0px align="left" style="background-color:white;"></td>
+  </tr>
+
+  <tr width=100% height=250px cellspacing=0px align="left" border=0px>
+    <td width=100% height=250px cellspacing=0px align="left" border=0px class="start3colour">
+		
+		
+		<script type="text/javascript"><!--
+		google_ad_client = "ca-pub-3488039325839512";
+		/* front page big */
+		google_ad_slot = "7778316988";
+		google_ad_width = 300;
+		google_ad_height = 250;
+		//-->
+		</script>
+		<script type="text/javascript"
+		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+		</script>
+	
+	
+	
+    </td>
+  </tr>
+</table>
+</body>
+</html>
