Added additional ads to homepage and grades section
Code is not minified yet

--- a/wp-content/themes/justaskkim-twentyeleven/accounting.html
+++ b/wp-content/themes/justaskkim-twentyeleven/accounting.html
@@ -1,1 +1,45 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/><link rel="stylesheet" type="text/css" href="homepagestyle.css"></link></head><body><table class="subjectslistpanelfull" cellspacing=0px align="left" class="roundedtables"><tr class="headerdimension" cellspacing=0px align="left"><td class="subjectslistheadergrades" class="headerdimension" class="gradescolour" cellspacing=0px align="left"><p class="headertext">Accounting</p></td></tr><tr class="subjectslistpanelshort" cellspacing=0px align="left"><td class="subjectslistpanelshort" cellspacing=0px align="left"><iframe src="accountingframe.html" class="panelsiframe" name="accountingframe" scrolling="auto" align="left"></iframe></td></tr></table></body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="homepagestyle.css">
+  </link>
+</head>
+<body>
+  <table class="subjectslistpanelfull" cellspacing=0px align="left" class="roundedtables">
+    <tr class="headerdimension" cellspacing=0px align="left">
+      <td class="subjectslistheadergrades" class="headerdimension" class="gradescolour" cellspacing=0px align="left">
+        <p class="headertext">
+          Accounting
+        </p>
+      </td>
+    </tr>
+    <tr class="subjectslistpanelshort" cellspacing=0px align="left" height=296px>
+      <td class="subjectslistpanelshort" cellspacing=0px align="left">
+        <iframe src="accountingframe.html" class="panelsiframe" name="accountingframe" scrolling="auto" align="left">
+        </iframe>
+      </td>
+    </tr>
+    <tr width=100% height=250px cellspacing=0px align="left" border=0px>
+    <td width=100% height=250px cellspacing=0px align="left" border=0px class="start3colour">
+		
+		
+		<script type="text/javascript"><!--
+		google_ad_client = "ca-pub-3488039325839512";
+		/* front page big */
+		google_ad_slot = "7778316988";
+		google_ad_width = 300;
+		google_ad_height = 250;
+		//-->
+		</script>
+		<script type="text/javascript"
+		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+		</script>
+	
+	
+	
+    </td>
+  </tr>
+  </table>
+</body>
+</html>
