--- a/wp-content/themes/justaskkim-twentyeleven/subjects.html
+++ b/wp-content/themes/justaskkim-twentyeleven/subjects.html
@@ -173,6 +173,9 @@ table, tr, td, th {
       <td class="listing" onclick="top.grades.location='spanish.html'; top.notes.location='nextstepgrades.html';" onmouseover='this.style.cursor="pointer"'><p class="listingstext"> spanish </p></td>
     </tr>
     <tr class="listingtr">
+      <td class="listing" onclick="top.grades.location='statistics.html'; top.notes.location='nextstepgrades.html';" onmouseover='this.style.cursor="pointer"'><p class="listingstext"> statistics </p></td>
+    </tr>
+    <tr class="listingtr">
       <td class="listing" onclick="top.grades.location='tech.html'; top.notes.location='nextstepgrades.html';" onmouseover='this.style.cursor="pointer"'><p class="listingstext"> tech </p></td>
     </tr>
     <tr class="listingtr">
