--- a/wp-content/themes/justaskkim-twentyeleven/nextstepgrades.html
+++ b/wp-content/themes/justaskkim-twentyeleven/nextstepgrades.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="homepagestyle_home.css">
-  </link>
-</head>
-<body>
-  <table height=100% width=100% cellspacing=0px align="left" class="roundedtables">
-    <tr width=100% height=340px cellspacing=0px align="left">
-      <td width=100% height=340px cellspacing=0px align="left">
-        <img src="http://farm4.staticflickr.com/3702/10999711735_211fc51797_o.jpg" height=340px width="100%"/>
-      </td>
-    </tr>
-    <tr width=100% height=250px cellspacing=0px align="left" border=0px>
-    <td width=100% height=250px cellspacing=0px align="left" border=0px class="start3colour">
-		
-		
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-3488039325839512";
-		/* front page big */
-		google_ad_slot = "7778316988";
-		google_ad_width = 300;
-		google_ad_height = 250;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-	
-	
-	
-    </td>
-  </tr>
-  </table>
-</body>
-</html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/><link rel="stylesheet" type="text/css" href="homepagestyle_home.css"></link></head><body><table height=100% width=100% cellspacing=0px align="left" class="roundedtables"><tr width=100% height=100% cellspacing=0px align="left"><td width=100% height=100% cellspacing=0px align="left"><img src="http://farm9.staticflickr.com/8474/8381023311_d785837485_z.jpg" height="100%" width="100%"/></td></tr></table></body></html>
