Added link to official app
- Added image link at the bottom of homepage
- Added link in start3 column

--- a/wp-content/themes/justaskkim-twentyeleven/index.html
+++ b/wp-content/themes/justaskkim-twentyeleven/index.html
@@ -207,15 +207,12 @@
     <tr width=912px class="start3colour" height=100px cellspacing=0px>
           <td height=100px cellspacing=0px>
           
-     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Homepage Wide -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-3488039325839512"
-     data-ad-slot="3657324983"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+          <a href="https://itunes.apple.com/us/app/onstudynotes/id789775061?mt=8">
+          <img src="https://farm4.staticflickr.com/3887/14376520224_d9f397a56b_o_d.png" height="100%" width="90%">
+		  </a>
+		
+
+
 	</td>
 	</tr>
   </table>
