--- a/wp-content/themes/justaskkim-twentyeleven/start3.html
+++ b/wp-content/themes/justaskkim-twentyeleven/start3.html
@@ -52,9 +52,9 @@
     <td width=100% height=3px cellspacing=0px align="left" style="background-color:white;"></td>
   </tr>
   
-  <tr width=100% height=62px cellspacing=0px align="left"><td width=100% height=62px cellspacing=0px align="left" class="submit" class="roundedthird" onclick="top.location='http://www.onstudynotes.com/partners/';" onmouseover='this.style.cursor="pointer"'>
+  <tr width=100% height=62px cellspacing=0px align="left"><td width=100% height=62px cellspacing=0px align="left" class="submit" class="roundedthird" onclick="top.location='https://itunes.apple.com/ca/app/onstudynotes/id789775061';" onmouseover='this.style.cursor="pointer"'>
     <center>
-      <p class="resettext">partners</p>
+      <p class="resettext">download our app</p>
     </center>
       </td>
   </tr>
